--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Aitor Medrano
-description: Código y textos
+title: aitor-medrano.github.io
+description: Apuntes y ejercicios
 theme: jekyll-theme-modernist
