--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: aitor-medrano.github.io
-description: Apuntes y ejercicios
+description: La huella de un docente de informática
 theme: jekyll-theme-cayman
