single and wide layout

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ plugins:
 minimal_mistakes_skin: "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
+layout: single
 title: "aitor-medrano.github.io"
 description: "La huella de un docente de informática"
 url: "https://aitor-medrano.github.io/"
@@ -23,12 +24,19 @@ author:
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/mmistakes"
+    - label: "X"
+      icon: "fab fa-fw fa-x-square"
+      url: "https://x.com/aitormedrano"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/mmistakes"
+      url: "https://github.com/aitor-medrano"
     - label: "Email"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/mmistakes"
+      icon: "fab fa-fw fa-envelope"
+      url: "mailto:a.medrano@edu.gva.es"
+
+main:
+  - title: "Inicio"
+    url: README.md
+  - title: "External Link"
+    url: https://google.com
+    target: _blank
