--- a/_config.yml
+++ b/_config.yml
@@ -1,42 +1,3 @@
-remote_theme: mmistakes/minimal-mistakes
-
-plugins:
-  - jekyll-include-cache
-  - jekyll-paginate
-  - jekyll-sitemap
-  - jekyll-gist
-  - jekyll-feed
-
-minimal_mistakes_skin: "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-
-# Site Settings
-layout: single
-title: "aitor-medrano.github.io"
-description: "La huella de un docente de informática"
-url: "https://aitor-medrano.github.io/"
-locale: "es-ES"
-logo: "logo.png"
-
-author:
-  name     : "Aitor Medrano"
-  bio      : "asdf"
-  location : "Elche, España"
-
-footer:
-  links:
-    - label: "X"
-      icon: "fab fa-fw fa-x-square"
-      url: "https://x.com/aitormedrano"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/aitor-medrano"
-    - label: "Email"
-      icon: "fab fa-fw fa-envelope"
-      url: "mailto:a.medrano@edu.gva.es"
-
-main:
-  - title: "Inicio"
-    url: README.md
-  - title: "External Link"
-    url: https://google.com
-    target: _blank
+title: aitor-medrano.github.io
+description: La huella de un docente de informática
+theme: jekyll-theme-cayman
